[project]
name = "guns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hdutfj", email = "156539429+Hdutfj@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.17",
]

[project.scripts]
guns = "guns:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
